# fractals

./: .gitignore  Cargo.toml  README.md  build.rs  flake.nix  rust-toolchain.toml
src/: benchmark.rs  koch_snowflake.rs  main.rs  memory_info.rs  render.rs  shader.wgsl  utils.rs  vec2.rs
src/curves/: canopy.rs  koch_snowflake.rs  mod.rs  sierpinski_triangle.rs
src/fractals/: koch_snowflake.rs  mod.rs
src/renderer/: mod.rs  shader.wgsl  state.rs  windowing.rs
src/renderer/vertex/: mod.rs  vec2.rs
src/rendering/: mod.rs  shader.wgsl  state.rs  windowing.rs
src/rendering/vertex/: mod.rs  vec2.rs
