[package]
name = "fractals"
version = "0.0.1"
edition = "2021"

[dependencies]
wgpu = "24.0" # graphics library using webgpu
env_logger = "0.10" # logging implementation, required to see what wgpu is doing
log = "0.4" # logging api, for own logging (with env_logger as implementation)
winit = { version = "0.29", features = ["rwh_05"] } # windowing
pollster = "0.3" # lightweight async runtime
bytemuck = { version = "1.16", features = [ "derive" ] } # simple (bitwise) type casting
itertools = "0.14.0" # iterator utilites like .unique()
