[package]
name = "fractals"
version = "0.3.0"
edition = "2021"
build = "build.rs"

[dependencies]
wgpu = "25.0.0" # graphics library using webgpu
env_logger = "0.11.8" # logging implementation, required to see what wgpu is doing
log = "0.4.27" # logging api, for own logging (with env_logger as implementation)
winit = "0.30.10" # windowing
pollster = "0.4.0" # lightweight async runtime
bytemuck = { version = "1.23.0", features = ["derive"] } # simple (bitwise) type casting
rayon = "1.10.0" # parallel iterators for simple parallelization
image = "0.25.6" # to load window icon

[build-dependencies]
winresource = "0.1.20" # set icon of .exe on windows
